# verbaterra.github.io

./: CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  justfile  mkdocs.yml  pyproject.toml
.github/.github/workflows/: webapp-pages.yml
api/: Dockerfile  api_main.py  pyproject.toml  requirements.txt
app/: streamlit_app.py
docs/: api.md  index.md  usage.md
src/verbaterra/: __init__.py  sim.py
tests/: test_sim.py
web/: index.html
webapp/: index.html  package.json  vite.config.ts
webapp/src/: App.tsx
