[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verbaterra"
version = "0.1.0"
description = "VerbaTerra cultural–linguistic simulation lab (vSION demo)"
authors = [{name="Harshit Gupta"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.2",
  "pydantic>=2.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]
ui = ["streamlit>=1.35", "matplotlib>=3.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"


[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","UP"]
exclude = ["site","build",".venv","venv"]

